fix: container spacing, media query & border

--- a/src/components/awards/awards.css
+++ b/src/components/awards/awards.css
@@ -2,8 +2,8 @@
     background-color: #f8f5f2;
     border-radius: 1rem;
     font-family: 'Raleway';
-    margin-top: 6rem;
-    padding: 1.5rem;
+    margin-top: 1.5rem;
+    /* padding: 1.5rem; */
     font-size: 1.2rem;
     font-family: 'Raleway', sans-serif;
     background-color: #f8f5f2;
@@ -35,6 +35,8 @@
     font-weight: bolder;
 }
 
-/* @media only screen and (max-width: 768px) {
- 
-} */
+@media only screen and (max-width: 768px) {
+    .award-title {
+        height: 120px;
+    }
+}
